cookie set and swagger comment added
